hifis/nest-dev/ingresses/nest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: nest-issuer
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["10.43.73.212"],"port":443,"protocol":"HTTPS","serviceName":"nest-dev:nest-desktop","ingressName":"nest-dev:nest","hostname":"nest-desktop.helmholtz-cloud.desy.de","path":"/","allNodes":true}]
  creationTimestamp: '2023-08-08T09:16:50Z'
  generation: 17
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      subresource: status
      time: '2024-08-02T13:34:15Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cert-manager.io/issuer: {}
            f:field.cattle.io/publicEndpoints: {}
        f:spec:
          f:defaultBackend:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:port:
                .: {}
                f:number: {}
          f:ingressClassName: {}
          f:rules: {}
          f:tls: {}
      manager: agent
      operation: Update
      time: '2024-12-06T22:10:34Z'
  name: nest
  namespace: nest-dev
  resourceVersion: '417518176'
  uid: 57c167d7-3e35-4c7d-9504-923e90488d49
spec:
  defaultBackend:
    service:
      name: apache2-oidc
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - host: nest-desktop.helmholtz-cloud.desy.de
      http:
        paths:
          - backend:
              service:
                name: nest-desktop
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nest-desktop.helmholtz-cloud.desy.de
      secretName: nest-tls
status:
  loadBalancer:
    ingress:
      - ip: 10.43.73.212
